# commit-summary-mcp

./: README.md  commit_summary_server.py  pyproject.toml
commit_summary_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
