[project]
name = "commit-summary-mcp"
version = "0.1.0"
description = "Model Context Protocol server that summarizes local git commits."
authors = [{ name = "Commit Summary MCP" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.21.0,<2.0.0",
    "httpx>=0.28.0,<1.0.0",
]

[project.scripts]
commit-summary-mcp = "commit_summary_server:main"
commit-summary-mcp-sse = "commit_summary_server:main_sse"
